[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "fpdf>=1.7.2",
    "python-bidi>=0.6.6",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.41",
    "telegram>=0.0.1",
]
